--- a/css/styles.css
+++ b/css/styles.css
@@ -6,32 +6,30 @@ body {
 
 figcaption {
     color: #FFFFFF;
-    padding: 1rem;
+    padding: 1rem 2em;
+    position: fixed;
+    bottom: 0;
+    background-color: rgba(0,0,0,.5);
 }
 
 figure {
-    display: none;
-    border: 1px dashed aqua;
     margin: 0;
     position: relative;
     background-color: #444444;
 }
 figure.active {
     display: block;
-    border: 1px dashed yellow;
-    transition-property: display;
-    transition-duration: 4s;
-    transition-delay: 2s;
 }
+
 figure img {
     width: 100%;
 }
-
 
 h1 {
     color: #f0f0f0;
     padding: 1rem;
     margin: 0;
+    border-bottom: 1px solid #666666;
 }
 
 nav a svg {
@@ -53,59 +51,23 @@ nav a {
     position: fixed;
     z-index: 1000;
 }
+nav a:hover {
+    background-color: rgba(0,0,0,0.65);
+}
 nav a#next { 
-    right: 0 
+    right: 0;
+    border-radius: 2em 0 0 2em;
 }
 nav a#prev { 
-    left: 0; 
-}
-nav a:hover#next, nav a:hover#prev {
-    background-color: rgba(0,0,0,1);
+    left: 0;
+    border-radius: 0 2em 2em 0;
 }
 
 
-@media (min-width: 480px) { 
-   
+@media (min-width: 480px) {
     nav a {
         width: 3rem;
         height: 3rem;
         padding: 1rem;           
     }
 }
-
-
-/*
-body {
-    color: #555;
-    margin: 0;
-    font-family: arial, sans-serif;
-    overflow: hidden
-}
-h1                  { margin: 0}
-
-
-#content {
-    width: 100%;
-    height: 100%;
-    background-color: #F0F0F0;
-    overflow: hidden;
-    xmargin-left: -20.0rem;
-    position: absolute;
-    left: 0;
-    background-color: orange;
-}	
-
-#content div {
-    width: 100%;
-    padding: 0 1px;
-    xheight: 35rem;
-    background-color: aqua;
-    position: absolute;
-    margin: 0 auto;
-}
-
-#content div img {
-    margin: 0 auto;
-    width: 100%;
-}	
-*/
