--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,9 @@ body {
 
 figcaption {
     color: #FFFFFF;
-    padding: 1rem 2em;
-    position: fixed;
+    font-size: .75rem;
+    padding: .75rem 1rem;
+    position: absolute;
     bottom: 0;
     background-color: rgba(0,0,0,.5);
 }
@@ -15,11 +16,11 @@ figcaption {
 figure {
     margin: 0;
     position: relative;
-    background-color: #444444;
 }
-figure.active {
-    display: block;
+figure.inactive {
+    display: none;
 }
+figure.active {}
 
 figure img {
     width: 100%;
@@ -27,9 +28,10 @@ figure img {
 
 h1 {
     color: #f0f0f0;
-    padding: 1rem;
+    font-size: 1.25rem;
+    padding: .5rem 0 .5rem .75rem;
     margin: 0;
-    border-bottom: 1px solid #666666;
+    cursor: pointer;
 }
 
 nav a svg {
@@ -65,9 +67,18 @@ nav a#prev {
 
 
 @media (min-width: 480px) {
+    figcaption {
+        font-size: 1rem;
+        padding: 1rem 1.5rem;
+    }
+    h1 {
+        font-size: 2rem;
+        padding: .75rem 0 .75rem 1rem;
+    }
     nav a {
         width: 3rem;
         height: 3rem;
         padding: 1rem;           
     }
+
 }
