--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,35 @@
+a {
+    color: #f0f0f0;
+}
+
+html {
+    font-size: 100%;
+}
+
 body {
     margin: 0;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     background-color: #000000;
 }
 
+button {
+    display: none;
+    position: absolute;
+    top: .75rem;
+    right: .75rem;
+    background-color: goldenrod;
+    width: 2rem;
+    height: 2rem;
+    border: none;
+    z-index: 1;
+}
+
 figcaption {
     color: #FFFFFF;
     font-size: .75rem;
-    padding: .75rem 1rem;
-    position: absolute;
-    bottom: 0;
-    background-color: rgba(0,0,0,.5);
+    padding: .5rem 0;
+    text-align: right;
+    background-color: aliceblue;
 }
 
 figure {
@@ -28,57 +47,83 @@ figure img {
 
 h1 {
     color: #f0f0f0;
-    font-size: 1.25rem;
-    padding: .5rem 0 .5rem .75rem;
+    font-size: 1.5rem;
+    padding: .25em .5em;
     margin: 0;
-    cursor: pointer;
+    background-color: chocolate;
+    position: relative;
 }
 
+h1.variation {
+    animation-duration: 1s;
+    animation-name: slideup;
+    animation-fill-mode: forwards;
+}
+
+nav {
+    display: none;
+}
 nav a svg {
     width: 100%;
 }
 nav a svg path.fill {
-    fill: rgba(255,255,255,0.75);
+    fill: rgba(240,240,240,0.5);
 }
 nav a:hover svg path.fill {
-    fill: rgba(255,255,255,1);
+    fill: rgba(255,255,255,0.75);
 } 
 nav a {
     display: block;
     list-style-type: none;
-    width: 1.25rem;
-    height: 1.25rem;
+    width: 2rem;
+    height: 2rem;
     padding: .5rem;    
     background-color: rgba(0,0,0,0.25);
     position: fixed;
-    z-index: 1000;
+    z-index: 1;
 }
 nav a:hover {
-    background-color: rgba(0,0,0,0.65);
+    background-color: rgba(0,0,0,1);
 }
 nav a#next { 
     right: 0;
-    border-radius: 2em 0 0 2em;
+    /*border-radius: 1em 0 0 1em;*/
 }
 nav a#prev { 
     left: 0;
-    border-radius: 0 2em 2em 0;
+    display: none;
+    /*border-radius: 0 1em 1em 0;*/
 }
 
-
+/* Desktop */
 @media (min-width: 480px) {
     figcaption {
         font-size: 1rem;
-        padding: 1rem 1.5rem;
+        color: red;
+    }
+    #gallery {
+        margin: 0 4rem;
+    }
+    header {
+        height: auto;
     }
     h1 {
         font-size: 2rem;
-        padding: .75rem 0 .75rem 1rem;
+        padding: .75rem 0 1rem 1rem;
+    }
+    @keyframes slideup {
+        from {
+            background-color: chocolate;
+        }
+        to {
+            background-color: burlywood;
+            font-size: 130%;
+        }
     }
     nav a {
         width: 3rem;
         height: 3rem;
-        padding: 1rem;           
+        padding: 1.5rem .5rem;
     }
 
 }
