--- a/css/styles.css
+++ b/css/styles.css
@@ -56,6 +56,7 @@ header {
 header h1 {
     font-family: Cutive, Georgia, serif;
     font-weight: 400;
+    text-shadow: 1px 21x 1px white;
     margin: .5rem 0 .125em 0;
     color: #666666;
     font-size: 1rem;
@@ -69,7 +70,7 @@ header p a {
     text-decoration: none;
     text-transform: uppercase;
     font-size: 75%;
-    background-color: darkcyan;
+    background-color: darkseagreen;
     padding: .375em 1em;
     border-radius: 6px;
 }
