--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ header {
 header h1 {
     font-family: Cutive, Georgia, serif;
     font-weight: 400;
-    text-shadow: 1px 21x 1px white;
+    text-shadow: 1px 2px 1px white;
     margin: .5rem 0 .125em 0;
     color: #666666;
     font-size: 1rem;
