--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
     --link-color: #333333;
     --article-background-color: #ffffff;
     --body-background-color: #e1e1e1;
-    --header-background-color: #e1e1e1;
+    --header-background-color: #f1f1f1;
     /*--body-background-color: #222;*/
     /*--header-background-color: #111;*/
 }
@@ -47,8 +47,8 @@ figure img {
 }
 
 figcaption {
-    color: #888888;
-    text-shadow: 1px 1px 1px white;
+    color: #999999;
+    text-shadow: 1px 1px 1px #333333;
     position: fixed;
     width: 100%;
     bottom: 1rem;
@@ -58,7 +58,7 @@ figcaption {
 header {
     display: flex;
     align-items: center;
-    background-color: var(--header-background-color);
+    background: linear-gradient(180deg, rgba(245,245,245,1) 0%, rgba(225,225,225,1) 100%);
 }
 header h1 {
     font-family: Cutive, Georgia, serif;
@@ -71,19 +71,18 @@ header h1 {
     font-size: 1rem;
     flex-grow: 1;
 }
-header div {
-    color: #777;
-    background-color: #CCC;
-    padding: 1rem 1.25em 1rem 1.25rem;
-    font-size: 80%;
-}
 header div a {
+    color: #999999;
+    background: linear-gradient(0deg, rgba(245,245,245,1) 0%, rgba(225,225,225,1) 100%);
+    font-size: 80%;
     text-transform: uppercase;
     text-decoration: none;
+    display: block;
+    padding: 1rem 1.25em 1rem 1.25rem;
 }
 header div a:hover {
-    color: #666;
-    background-color: khaki;
+    color: #777777;
+    background: linear-gradient(180deg, rgba(245,245,245,1) 0%, rgba(225,225,225,1) 100%);
 }
 header div a span {
     display: none;
@@ -106,10 +105,10 @@ nav a {
     width: 5rem;
     height: 5rem;
     z-index: 1;
-    background-color: rgba(0,0,0,0.25);
+    background-color: rgba(50,50,50,0.25);
 }
 nav a:hover {
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(50,50,50,0.5);
 }
 nav a svg {
     margin: .75em;
@@ -120,7 +119,7 @@ nav a svg path.fill {
 nav a#next {
     float: right;
 }
-nav a#prev { 
+nav a#prev {
     float: left;
     display: none;
 }
@@ -173,10 +172,17 @@ section article footer {
     figcaption {
         font-size: 1rem;
         padding: .5rem;
-        bottom: 8em;
+        bottom: 2em;
+    }
+    figure {
+        text-align: center;
+    }
+    figure img {
+        width: auto;
+        height: 99%;
     }
     #gallery {
-        margin: 0 4rem;
+        margin: 0;
     }
     header {
         height: auto;
@@ -185,11 +191,17 @@ section article footer {
         font-size: 1.5rem;
     }
     header div {
-        padding: 1rem 1.25em 1rem 1.25rem;
-        font-size: 90%;
+        margin-right: 1rem;
+    }
+    header div a {
+        display: block;
+        padding: .75rem 1.25em .75rem 1.25rem;
+        border-radius: 10px;
+        border-right: 1px solid #ccc;
+        border-bottom: 1px solid #ccc;
     }
     header div a span {
-        display: block;
+        display: inline;
     }
     nav {
         overflow: hidden;
@@ -202,6 +214,12 @@ section article footer {
         width: 2.5rem;
         height: 2.5rem;
         padding: 1.5rem .75rem;
+    }
+    nav a#next {
+        border-radius: 10px 0 0 10px;
+    }
+    nav a#prev {
+        border-radius: 0 10px 10px 0;
     }
     nav a svg {
         margin: 0;
