--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ html {
     src: url("../font/PontanoSans-Regular.ttf");
 }
 
-/* HTNL tags ---------------------------- */
+/* HTML tags ---------------------------- */
 a {
     color: var(--accent-color);
     text-decoration: none;
@@ -33,68 +33,59 @@ body {
     font-family: Pontano, Helvetica, Arial, sans-serif;
     background-color: var(--light-background-color);
 }
-figure {
-    margin: 0;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position-x: center;
-    position: relative;
-}
-figure.inactive {
-    display: none;
-}
-figure.active {
-    opacity: 0;
-    animation: fade-slide .5s ease-in forwards;
-}
-figure img {
-    width: 100%;
-}
-figcaption {
-    position: fixed;
-    width: 100%;
-    bottom: 0;
-    text-align: center;
-}
-figcaption div {
-    color: #f0f0f0;
-    display: inline-block;
-    background-color: rgba(25,25,25,0.5);
-    border-radius: 6px;
-    padding: 4px 10px 5px;
+/* Desktop */
+@media only screen and (min-width: 900px) {
+    body > div {
+        font-size: 100%;
+    }
 }
 footer#pagefooter {
     color: white;
     background-color: #222;
     border-top: 1px solid #555;
-    height: 3em;
-    display: flex;
-    flex-flow: row;
     order: 1;
-    justify-content: space-between;
+    padding: 0 1.5em;
 }
 footer#pagefooter h3 {
-    /* Margin needs to be on container */
-    /*margin: .625em 0 0 .5em;*/
+    margin: .655em 0;
+    padding: 0;
 }
-footer#pagefooter p {
-    /* Margin needs to be on container */
-    /* margin: auto 1em; */
+footer#pagefooter #slidecount {
+    float: left;
+}
+footer#pagefooter #allgalleries {
+    float: right;
+}
+/* Wide */
+@media only screen and (min-aspect-ratio: 2/1) {
+    body {
+        border: 4px solid blue;
+    }
+    footer#pagefooter {
+        height: 3em;
+        display: flex;
+        flex-flow: row;
+        justify-content: space-between;
+    }
+    footer#pagefooter #slidecount {
+        float: none;
+    }
+    footer#pagefooter #allgalleries {
+        float: none;
+    }
 }
 header#indexheader {
     display: flex;
     align-items: center;
     background: linear-gradient(180deg, rgba(80,80,80,1) 0%, rgba(0,0,0,1) 100%);
+    box-shadow: 0 0 12px #666666;
 }
 header#indexheader h1 {
     color: var(--accent-color);
     font-family: Oleo, Georgia, serif;
     font-weight: 400;
-    text-shadow: 1px 2px 1px black;
-    margin: 0;
-    padding: .5em 0 .5em .75em;
-    line-height: 1.25em;
-    font-size: .875rem;
+    text-align: center;
+    font-size: 1.5rem;
     flex-grow: 1;
 }
 header#indexheader div a {
@@ -108,13 +99,31 @@ header#indexheader div a:hover {
 header#indexheader div a span {
     display: none;
 }
+/* Desktop */
+@media only screen and (min-width: 900px) {
+    header#indexheader {
+        height: auto;
+    }
+    header#indexheader h1 {
+        text-align: left;
+        font-size: 2.5rem;
+        padding-left: 1.25rem;
+        margin: 1rem 0;
+    }
+    header#indexheader div {
+        margin-right: 1rem;
+    }
+    header#indexheader div a span {
+        display: inline;
+    }
+}
 /* Arrow navigation */
 nav {
     overflow: hidden;
-    position: fixed;
     z-index: 100;
     width: 100%;
-    bottom: 0;
+    position: absolute;
+    bottom: calc((100% - 2.5em)/2.5);
 }
 nav a {
     display: block;
@@ -137,14 +146,24 @@ nav a#next {
 nav a#prev {
     float: left;
 }
-
-/* Animations --------------------------- */
-@keyframes fade-slide {
-    0% {
-        opacity: 0;
+/* Desktop */
+@media only screen and (min-width: 900px) {
+    nav {
+        bottom: calc((100% - 2.5em)/2);
     }
-    100% {
-        opacity: 1;
+    nav a {
+        width: 3.5rem;
+        height: 3.5rem;
+        padding: 1.5rem .75rem;
+    }
+    nav a#next {
+        border-radius: 10px 0 0 10px;
+    }
+    nav a#prev {
+        border-radius: 0 10px 10px 0;
+    }
+    nav a svg {
+        margin: 0;
     }
 }
 
@@ -154,15 +173,25 @@ nav a#prev {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+    background-color: #000000;
 }
 #gallery section div {
-    background-color: #000000;
+    animation: fade-in 1s ease forwards;
+    background-color: transparent;
     margin: 0;
     background-repeat: no-repeat;
     background-size: contain;
     background-position-x: 50%;
     flex: 1;
     text-indent: -99em;
+}
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 /* Index page */
@@ -239,7 +268,7 @@ nav a#prev {
 #gallery-index section article footer p {
     color:var(--med-text-color);
     font-size:.875em;
-    flex:1 1 0px;
+    flex:1 1 0;
     text-align:center;
     margin: 0;
     line-height: 2em;
@@ -250,59 +279,4 @@ nav a#prev {
 }
 .hide {
     display: none;
-}
-
-/* Media queries ------------------------ */
-/* Desktop */
-@media only screen and (min-width: 900px) {
-    body > div {
-        font-size: 100%;
-    }
-    figcaption {
-        font-size: 1rem;
-        padding: .5rem;
-    }
-    figure {
-        text-align: center;
-    }
-    figure img {
-        width: auto;
-        height: 99%;
-    }
-    /*#gallery {*/
-    /*    margin: 0;*/
-    /*}*/
-    header#indexheader {
-        height: auto;
-    }
-    header#indexheader h1 {
-        font-size: 2.5rem;
-    }
-    header#indexheader div {
-        margin-right: 1rem;
-    }
-    header#indexheader div a span {
-        display: inline;
-    }
-    nav {
-        overflow: hidden;
-        position: absolute;
-        z-index: 100;
-        width: 100%;
-        bottom: calc((100% - 2.5em)/2);
-    }
-    nav a {
-        width: 2.5rem;
-        height: 2.5rem;
-        padding: 1.5rem .75rem;
-    }
-    nav a#next {
-        border-radius: 10px 0 0 10px;
-    }
-    nav a#prev {
-        border-radius: 0 10px 10px 0;
-    }
-    nav a svg {
-        margin: 0;
-    }
 }
